--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Student Registration Form</title>
+    <center><title>Student Registration Form</title></center>
 </head>
 <body>
-    <center><h1>Student Registration Form</h1></center>
-    <form name="myform" action="" method="POST">
-        <table cellpadding="5" cellspacing="5" bgcolor="yellow" align="center">
+    <h1>Student Registration Form</h1>
+    <form>
+        <table>
             <tr>
                 <td>First Name:</td>
                 <td><input type="text" name="fname" required></td>
@@ -16,12 +16,8 @@
                 <td><input type="text" name="lname" required></td>
             </tr>
             <tr>
-                <td>Father's Name:</td>
-                <td><input type="text" name="fathername" required></td>
-            </tr>
-            <tr>
-                <td>Mother's Name:</td>
-                <td><input type="text" name="mothername" required></td>
+                <td>Password:</td>
+                <td><input type="date" name="date" required></td>
             </tr>
             <tr>
                 <td>Date of Birth:</td>
@@ -36,17 +32,26 @@
                 <td>
                     <input type="radio" name="gender" value="Male" required> Male
                     <input type="radio" name="gender" value="Female" required> Female
+                    <input type="radio" name="gender" value="Others" required> Others
                 </td>
             </tr>
             <tr>
-                <td>Choose Course:</td>
+                <td>Hobbies:</td>
                 <td>
-                    <select name="course" required>
+                    <input type="checkbox" name="hobbies" value="Reading" required> Reading
+                    <input type="checkbox" name="hobbies" value="Playing Guitar" required> Playing Guitar
+                    <input type="checkbox" name="hobbies" value="Gardening" required> Gardening
+                </td>
+            </tr>
+            <tr>
+                <td>Department Type:</td>
+                <td>
+                    <select name="department" required>
                         <option value="">---Select---</option>
-                        <option value="HTML">HTML</option>
-                        <option value="Introduction to JAVA">JAVA</option>
-                        <option value="C sharp programming">C_Sharp</option>
-                        <option value="Programming with Python">Python</option>
+                        <option value="CS">CS</option>
+                        <option value="EEE">EEE</option>
+                        <option value="BBA">BBA</option>
+                        <option value="LAW">LAW</option>
                     </select>
                 </td>
             </tr>
@@ -55,10 +60,25 @@
                 <td><textarea name="address" required></textarea></td>
             </tr>
             <tr>
+                <td>Image:</td>
+                <td>
+                    <input type="file" name="image" value="" required>
+                </td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><input type="button" name="button" value="Click"></td>
+            </tr>
+            <tr>
                 <td></td>
                 <td><input type="submit" name="submit" value="Register"></td>
             </tr>
+            <tr>
+                <td></td>
+                <td><input type="button" name="reset" value="Reset"></td>
+            </tr>
         </table>
-    </form>
 </body>
+</from>
+</table>
 </html>
